# CodingUtils

./: .pre-commit-config.yaml  LICENSE  README.md  merger.py  out.txt  pyproject.toml  setup.py
.github/workflows/: CI.yml  ci.yml  run_tests.yml
codingutils/: __init__.py  comment_extractor.py  common_utils.py  merger.py  tree_generater.py
docs/: Comment-extractor_RU.md  Merger_RU.md  Tree_generator_RU.md
tests/: conftest.py  test_comment_extractor.py  test_common_utils.py  test_file_merger.py  test_merger.py  test_tree.py  test_tree_generater.py
