[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codingutils"
version = "1.0.0"
description = "A comprehensive set of Python utilities for code analysis, file management, and project documentation"
readme = "README.md"
authors = [
    {name = "CodingUtils Team", email = "codingutils@example.com"}
]
license = {text = "MIT"}
keywords = ["code", "utilities", "comments", "merger", "tree", "gitignore"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

dependencies = [
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/VasenkovAA/CodingUtilsodingutils"
Documentation = "https://github.com/VasenkovAA/CodingUtils#readme"
Repository = "https://github.com/VasenkovAA/CodingUtils"
"Bug Reports" = "https://github.com/VasenkovAA/CodingUtils"

[project.scripts]
comment-extractor = "codingutils.comment_extractor:main"
file-merger = "codingutils.merger:main"
project-tree = "codingutils.tree_generater:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codingutils*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "B905",  # zip without strict parameter
    "F401",  # unused imports (common in scripts)
    "F841",  # unused variable (common in scripts)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"